--- a/main.ipynb
+++ b/main.ipynb
@@ -14,6 +14,10 @@
     "\n",
     "conda install notebook\n",
     "\n",
+    "- Installing pandas\n",
+    "\n",
+    " sudo python3 -m pip install pandas\n",
+    "\n",
     "\n"
    ],
    "cell_type": "markdown",
@@ -1637,6 +1641,280 @@
    ],
    "cell_type": "markdown",
    "metadata": {}
+  },
+  {
+   "source": [
+    "- Major difference between regression and classification is that the output of the first is continuous, while classification is discrete;"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Mining stock price index\n",
+    "\n",
+    "During a trading day the price of a stock fluctuates, so we will focus on five measures:\n",
+    "\n",
+    "- Open: The starting price on a given trading day;\n",
+    "\n",
+    "- Close: The final price on the day;\n",
+    "\n",
+    "- High: The maximum price on the day;\n",
+    "\n",
+    "- Low: The lowest price on the day;\n",
+    "\n",
+    "- Volume: The total number of shares traded;\n",
+    "\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Getting started with feature engineering\n",
+    "\n",
+    "- Definition: The process of creating domain-specific features based on existing features in order to improve the preformance of a machine learning algorithm;\n",
+    "\n",
+    "- We will generate several measures from past datas to be used in regressions"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Acquiring data and generating features\n",
+    "\n",
+    "The data used here refers to Nasdaq index from Dec-01-2005 to Dec-10-2005 (https://finance.yahoo.com/quote/%5EIXIC/history?period1=1133395200&period2=1134172800&interval=1d&filter=history&frequency=1d&includeAdjustedClose=true)\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "         Date         Open         High          Low        Close  \\\n",
+       "0  2005-12-01  2244.850098  2269.389893  2244.709961  2267.169922   \n",
+       "1  2005-12-02  2266.169922  2273.610107  2261.129883  2273.370117   \n",
+       "2  2005-12-05  2269.070068  2269.479980  2250.840088  2257.639893   \n",
+       "3  2005-12-06  2267.760010  2278.159912  2259.370117  2260.760010   \n",
+       "4  2005-12-07  2263.290039  2264.909912  2244.620117  2252.010010   \n",
+       "5  2005-12-08  2254.800049  2261.610107  2233.739990  2246.459961   \n",
+       "6  2005-12-09  2247.280029  2258.669922  2241.030029  2256.729980   \n",
+       "\n",
+       "     Adj Close      Volume  \n",
+       "0  2267.169922  2010420000  \n",
+       "1  2273.370117  1758510000  \n",
+       "2  2257.639893  1659920000  \n",
+       "3  2260.760010  1788200000  \n",
+       "4  2252.010010  1733530000  \n",
+       "5  2246.459961  1908360000  \n",
+       "6  2256.729980  1658570000  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>Date</th>\n      <th>Open</th>\n      <th>High</th>\n      <th>Low</th>\n      <th>Close</th>\n      <th>Adj Close</th>\n      <th>Volume</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2005-12-01</td>\n      <td>2244.850098</td>\n      <td>2269.389893</td>\n      <td>2244.709961</td>\n      <td>2267.169922</td>\n      <td>2267.169922</td>\n      <td>2010420000</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>2005-12-02</td>\n      <td>2266.169922</td>\n      <td>2273.610107</td>\n      <td>2261.129883</td>\n      <td>2273.370117</td>\n      <td>2273.370117</td>\n      <td>1758510000</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>2005-12-05</td>\n      <td>2269.070068</td>\n      <td>2269.479980</td>\n      <td>2250.840088</td>\n      <td>2257.639893</td>\n      <td>2257.639893</td>\n      <td>1659920000</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>2005-12-06</td>\n      <td>2267.760010</td>\n      <td>2278.159912</td>\n      <td>2259.370117</td>\n      <td>2260.760010</td>\n      <td>2260.760010</td>\n      <td>1788200000</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>2005-12-07</td>\n      <td>2263.290039</td>\n      <td>2264.909912</td>\n      <td>2244.620117</td>\n      <td>2252.010010</td>\n      <td>2252.010010</td>\n      <td>1733530000</td>\n    </tr>\n    <tr>\n      <th>5</th>\n      <td>2005-12-08</td>\n      <td>2254.800049</td>\n      <td>2261.610107</td>\n      <td>2233.739990</td>\n      <td>2246.459961</td>\n      <td>2246.459961</td>\n      <td>1908360000</td>\n    </tr>\n    <tr>\n      <th>6</th>\n      <td>2005-12-09</td>\n      <td>2247.280029</td>\n      <td>2258.669922</td>\n      <td>2241.030029</td>\n      <td>2256.729980</td>\n      <td>2256.729980</td>\n      <td>1658570000</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 5
+    }
+   ],
+   "source": [
+    "mydata = pd.read_csv('data/20051201_20051210.csv')\n",
+    "mydata"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_original_feature(df,df_new):\n",
+    "    df_new['open'] = df['Open']\n",
+    "    df_new['open_1'] = df['Open'].shift(1)\n",
+    "    df_new['close_1'] = df['Close'].shift(1)\n",
+    "    df_new['high_1'] = df['High'].shift(1)\n",
+    "    df_new['low_1'] = df['Low'].shift(1)\n",
+    "    df_new['volume_1'] = df['Volume'].shift(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_avg_price(df, df_new):\n",
+    "    df_new['avg_price_5'] = df['Close'].rolling(5).mean().shift(1)\n",
+    "    df_new['avg_price_30'] = df['Close'].rolling(21).mean().shift(1)\n",
+    "    df_new['avg_price_365'] = df['Close'].rolling(252).mean().shift(1)\n",
+    "    df_new['ratio_avg_price_5_30'] = df_new['avg_price_5'] / df_new['avg_price_30']\n",
+    "    df_new['ratio_avg_price_5_365'] = df_new['avg_price_5'] / df_new['avg_price_365']\n",
+    "    df_new['ratio_avg_price_30_365'] = df_new['avg_price_30'] / df_new['avg_price_365']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_avg_volume(df, df_new):\n",
+    "    df_new['avg_volume_5'] = df['Volume'].rolling(5).mean().shift(1)\n",
+    "    df_new['avg_volume_30'] = df['Volume'].rolling(21).mean().shift(1)\n",
+    "    df_new['avg_volume_365'] = df['Volume'].rolling(252).mean().shift(1)\n",
+    "    df_new['ratio_avg_volume_5_30'] = df_new['avg_volume_5'] / df_new['avg_volume_30']\n",
+    "    df_new['ratio_avg_volume_5_365'] = df_new['avg_volume_5'] / df_new['avg_volume_365']\n",
+    "    df_new['ratio_avg_volume_30_365'] = df_new['avg_volume_30'] / df_new['avg_volume_365']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_std_price(df, df_new):\n",
+    "    df_new['std_price_5'] = df['Close'].rolling(5).std().shift(1)\n",
+    "    df_new['std_price_30'] = df['Close'].rolling(21).std().shift(1)\n",
+    "    df_new['std_price_365'] = df['Close'].rolling(252).std().shift(1)\n",
+    "    df_new['ratio_std_price_5_30'] = df_new['std_price_5'] / df_new['std_price_30']\n",
+    "    df_new['ratio_std_price_5_365'] = df_new['std_price_5'] / df_new['std_price_365']\n",
+    "    df_new['ratio_std_price_30_365'] = df_new['std_price_30'] / df_new['std_price_365']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_std_volume(df, df_new):\n",
+    "    df_new['std_volume_5'] = df['Volume'].rolling(5).std().shift(1)\n",
+    "    df_new['std_volume_30'] = df['Volume'].rolling(21).std().shift(1)\n",
+    "    df_new['std_volume_365'] = df['Volume'].rolling(252).std().shift(1)\n",
+    "    df_new['ratio_std_volume_5_30'] = df_new['std_volume_5'] / df_new['std_volume_30']\n",
+    "    df_new['ratio_std_volume_5_365'] = df_new['std_volume_5'] / df_new['std_volume_365']\n",
+    "    df_new['ratio_std_volume_30_365'] = df_new['std_volume_30'] / df_new['std_volume_365']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def add_return_feature(df, df_new):\n",
+    "    df_new['return_1'] = ((df['Close'] - df['Close'].shift(1)) / df['Close'].shift(1)).shift(1)\n",
+    "    df_new['return_5'] = ((df['Close'] - df['Close'].shift(5)) / df['Close'].shift(5)).shift(1)\n",
+    "    df_new['return_30'] = ((df['Close'] - df['Close'].shift(21)) / df['Close'].shift(21)).shift(1)\n",
+    "    df_new['return_365'] = ((df['Close'] - df['Close'].shift(252)) / df['Close'].shift(252)).shift(1)\n",
+    "    df_new['moving_avg_5'] = df_new['return_1'].rolling(5).mean().shift(1)\n",
+    "    df_new['moving_avg_30'] = df_new['return_1'].rolling(21).mean().shift(1)\n",
+    "    df_new['moving_avg_365'] = df_new['return_1'].rolling(252).mean().shift(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def generate_features(df):\n",
+    "    \"\"\"\n",
+    "    Generate features for a stock/index based on historical\n",
+    "    price and performance\n",
+    "    @param df: dataframe with columns \"Open\", \"Close\", \"High\",\n",
+    "    \"Low\", \"Volume\", \"Adjusted Close\"\n",
+    "    @return: dataframe, data set with new features\n",
+    "    \"\"\"\n",
+    "    df_new = pd.DataFrame()\n",
+    "    # 6 original features\n",
+    "    add_original_feature(df, df_new)\n",
+    "    # 31 generated features\n",
+    "    add_avg_price(df, df_new)\n",
+    "    add_avg_volume(df, df_new)\n",
+    "    add_std_price(df, df_new)\n",
+    "    add_std_volume(df, df_new)\n",
+    "    add_return_feature(df, df_new)\n",
+    "    # the target\n",
+    "    df_new['close'] = df['Close']\n",
+    "    df_new = df_new.dropna(axis=0)\n",
+    "    return df_new"
+   ]
+  },
+  {
+   "source": [
+    "The exercise will be better performed with a larger dataset, thus we move to Dec-31-1991 to Dec-30-2020 for Nasdaq price (https://finance.yahoo.com/quote/%5EIXIC/history?period1=694224000&period2=1609372800&interval=1d&filter=history&frequency=1d&includeAdjustedClose=true) "
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "       open  open_1  close_1  high_1   low_1     volume_1  avg_price_5  \\\n254  675.31  673.00   676.95  676.95  672.10  203190000.0      669.988   \n255  670.52  675.31   671.80  676.78  671.42  188870000.0      671.172   \n256  678.44  670.52   674.34  674.35  670.51  229400000.0      672.790   \n257  681.56  678.44   681.85  681.89  676.73  270020000.0      675.358   \n258  677.19  681.56   678.21  685.30  677.82  296930000.0      676.630   \n\n     avg_price_30  avg_price_365  ratio_avg_price_5_30  ...  \\\n254       661.630        599.335                 1.013  ...   \n255       662.529        599.628                 1.013  ...   \n256       663.385        599.914                 1.014  ...   \n257       664.350        600.198                 1.017  ...   \n258       664.906        600.430                 1.018  ...   \n\n     ratio_std_volume_5_365  ratio_std_volume_30_365  return_1  return_5  \\\n254                   1.010                    0.988     0.008     0.021   \n255                   0.571                    1.002    -0.008     0.009   \n256                   0.377                    1.002     0.004     0.012   \n257                   0.809                    1.024     0.011     0.019   \n258                   1.101                    1.108    -0.005     0.009   \n\n     return_30  return_365  moving_avg_5  moving_avg_30  moving_avg_365  \\\n254      0.035       0.142         0.003          0.001           0.001   \n255      0.029       0.124         0.004          0.002           0.001   \n256      0.027       0.120         0.002          0.001           0.000   \n257      0.031       0.117         0.002          0.001           0.000   \n258      0.018       0.094         0.004          0.001           0.000   \n\n      close  \n254  671.80  \n255  674.34  \n256  681.85  \n257  678.21  \n258  677.21  \n\n[5 rows x 38 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "data_raw = pd.read_csv('data/19911231_20201230.csv')\n",
+    "data = generate_features(data_raw)\n",
+    "print(data.round(decimals=3).head(5))"
+   ]
+  },
+  {
+   "source": [
+    "### Quick recap on how linear regression is estimated\n",
+    "\n",
+    "We would like to optimize weights in order to minimize the Sum of Means Squared Errors, mathematically:\n",
+    "\n",
+    "$$ J(w) = \\frac{1}{m}\\sum_{i=1}^m \\frac{1}{2} \\left(\\hat{y}(x^{(i)}) - y^{(i)} \\right)^2 $$\n",
+    "\n",
+    "Where:\n",
+    "\n",
+    "$$ \\hat{y}(x^{(i)}) = w^T x^{(i)} $$\n",
+    "\n",
+    "The minimization problem then leads to:\n",
+    "\n",
+    "$$ \\frac{\\partial J(w)}{\\partial w} = \\frac{1}{m} \\sum_{i=1}^m - \\left( y^{(i)} - \\hat{y}(x^{(i)}) \\right) x^{(i)} $$\n",
+    "\n",
+    "And the results are found using an iterative process, with learning rate $\\eta$:\n",
+    "\n",
+    "$$ w := w + \\eta \\frac{1}{m} \\sum_{i=1}^m - \\left( y^{(i)} - \\hat{y}(x^{(i)}) \\right) x^{(i)} $$\n",
+    "\n",
+    "After iterating multiple times, we get the learned $w$ is used for prediction:\n",
+    "\n",
+    "$$ y' = w^T x'$$\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
+    "### Implementing linear regression from the scratch\n"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   }
  ],
  "metadata": {
@@ -1655,7 +1933,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.8.8"
   }
  },
  "nbformat": 4,
